--- a/styles/global-layout.css
+++ b/styles/global-layout.css
@@ -27,12 +27,51 @@ html{
 }
 
 .controls{
-  display: flex;
-  flex-wrap: wrap;
   position: absolute;
   width: 100%;
-  bottom: 0px;
+  height: 30px;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0px 15px;
+  bottom: 2px;
   background-color: grey;
+  opacity: 0.8;
 }
 
+.time-bar{
+  width: 70%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
 
+.time-bar .juice{
+  background-color: orange;
+  height: 7px;
+  width: 100%;
+  border-radius: 5px;
+  
+}
+
+.buttons-container{
+  display: flex;
+  align-items: center;
+  width: 100px;
+  height: 100%;
+  order: -1;
+  
+}
+
+.buttons-container *{
+  color: white;
+}
+
+.play-button{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: none;
+  background: none;
+  cursor: pointer;
+  
+}
