--- a/styles/global-layout.css
+++ b/styles/global-layout.css
@@ -20,6 +20,7 @@ html{
   position: relative;
   width: 100%;
   max-width: 600px;
+  overflow-y: hidden;
 }
 
 .video{
@@ -31,25 +32,34 @@ html{
   width: 100%;
   height: 30px;
   display: flex;
+  align-items: center;
   flex-wrap: wrap;
   padding: 0px 15px;
   bottom: 2px;
   background-color: grey;
   opacity: 0.8;
+  transform: translateY(100%);
 }
+
+.video-wrapper:hover .controls{
+  transform: translate(0px);
+}
+
 
 .time-bar{
   width: 70%;
-  height: 100%;
+  height: 7px;
+  border-radius:  5px;
   display: flex;
   align-items: center;
+  background-color: black;
 }
 
 .time-bar .juice{
   background-color: orange;
-  height: 7px;
-  width: 100%;
-  border-radius: 5px;
+  height: 100%;
+  width: 0px;
+  border-radius: inherit;
   
 }
 
@@ -73,5 +83,4 @@ html{
   border: none;
   background: none;
   cursor: pointer;
-  
 }
