--- a/styles/global-layout.css
+++ b/styles/global-layout.css
@@ -27,13 +27,17 @@ html{
   width: 100%;
 }
 
+
+.video-wrapper:hover .video__controls{
+  transform: translate(0px);
+  transition-duration: 150ms;
+  transition-delay: 0ms;
+}
+
 .video__controls{
-  display: flex;
   position: absolute;
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  flex-wrap: wrap;
   width: 100%;
   height: 30px;
   padding: 0px 15px;
@@ -47,32 +51,75 @@ html{
 }
 
 
-.video-wrapper:hover .video__controls{
-  transform: translate(0px);
-  transition-duration: 150ms;
-  transition-delay: 0ms;
-}
 
-.video__controls > *{
-  
-  padding: 5px;
-  font-size: 11px;
+.video__controls > div{
+  height: 100%;
+  display: flex;
+  align-items: center;
+  font-size: 12px;
   cursor: pointer;
 }
 
+.video__controls > div span{
+  padding: 6px 10px;
+}
+
+.video__volume{
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  width: 26px;
+  transition: width 800ms ease-in-out;
+}
+
+.video__volume .video__volume--slider{
+  width: 90%;
+  opacity: 0;
+  appearance: none;
+  background-color: white;
+  height: 3px;
+  border-radius: 30px;
+  transition: opacity 800ms ease-in-out;
+  transform-origin: left;
+  cursor: pointer;
+  outline: none;
+}
+
+.video__volume--slider::-webkit-slider-thumb{
+  appearance: none;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: white;
+}
+
+.video__volume:hover .video__volume--slider{
+  transition-duration: 300ms;
+  opacity: 1;
+}
+
+.video__volume:hover{
+  width: 70px;
+  transition-duration: 300ms;
+}
+
 .video__time-bar{
+  width: 40%;
+}
+
+.video__time-bar--background{
   height: 7px;
   border-radius:  5px;
-  width: 40%;
+  width: 100%;
   display: flex;
   align-items: center;
   background-color: black;
 }
 
-.video__time-bar .video__time-bar__juice{
+.video__time-bar--background .video__time-bar--juice{
   background-color: orange;
   height: 100%;
-  width: 50%;
+  width: 0;
   border-radius: inherit;
 }
 
